--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7",
     "@types/common-tags": "^1",
+    "@types/express": "^4.17.17",
     "@types/jest": "^26",
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
@@ -24,6 +25,7 @@
     "eslint-config-prettier": "^8",
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
+    "express": "^4.18.2",
     "jest": "^29",
     "mongodb-memory-server": "^8",
     "prettier": "^2",
@@ -37,6 +39,7 @@
     "@azure/openai": "^1.0.0-beta.2",
     "common-tags": "^1",
     "dotenv": "^16.3.1",
+    "exponential-backoff": "^3.1.1",
     "mongodb": "^5.6.0",
     "openai": "^3",
     "winston": "^3"
