--- a/.drone.yml
+++ b/.drone.yml
@@ -70,7 +70,7 @@ steps:
   - name: publish-staging-chat-server
     image: plugins/kaniko-ecr
     settings:
-      dockerfile: Dockerfile
+      dockerfile: chat-server.dockerfile
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
