--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,7 @@ trigger:
       - chat-server/**/*
       - chat-core/**/*
       - chat-ui/**/*
+      - ingest/**/*
 
 steps:
   - name: test
@@ -29,6 +30,10 @@ steps:
       - cd chat-server
       - npm ci
       - npm run lint
+      - npm run test
+      - cd ..
+      - cd ingest
+      - npm ci
       - npm run test
     environment:
       PORT: 3000
@@ -47,6 +52,8 @@ steps:
         from_secret: openai_embedding_deployment
       OPENAI_CHAT_COMPLETION_DEPLOYMENT:
         from_secret: openai_chat_completion_deployment
+      DEVCENTER_CONNECTION_URI:
+        from_secret: devcenter_connection_uri
 
 ---
 depends_on: ["test-all"]
@@ -187,3 +194,75 @@ steps:
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
+
+# Ingest service
+
+---
+depends_on: ["test-all"]
+kind: pipeline
+type: kubernetes
+name: staging-build-ingest-service
+
+trigger:
+  branch:
+    - main
+  event:
+    - push
+  paths:
+    include:
+      - ingest/**/*
+      - chat-core/**/*
+
+steps:
+  # Builds and publishes Docker image for staging
+  - name: publish-staging-ingest-service
+    image: plugins/kaniko-ecr
+    settings:
+      dockerfile: ingest-service.dockerfile
+      create_repository: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: docs/${DRONE_REPO_NAME}-ingest-service
+      tags:
+        - git-${DRONE_COMMIT_SHA:0:7}-staging
+        - latest-staging
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+
+  # Promotes current drone build to staging environment
+  - name: promote-staging-ingest-service
+    image: drone/cli:1.4.0-alpine
+    commands:
+      - drone build promote mongodb/docs-chatbot ${DRONE_BUILD_NUMBER} staging
+    environment:
+      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+      DRONE_TOKEN:
+        from_secret: drone_token
+
+---
+kind: pipeline
+type: kubernetes
+name: staging-deploy-ingest-service
+
+trigger:
+  event:
+    - promote
+  target:
+    - staging
+
+steps:
+  # Deploys docker image associated with staging build that triggered promotion
+  - name: deploy-staging-ingest-service
+    image: quay.io/mongodb/drone-helm:v3
+    settings:
+      chart: mongodb/cronjobs
+      chart_version: 1.7.1
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: docs
+      release: ingest-service
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-staging,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-ingest-service,ingress.enabled=true,ingress.hosts[0]=ingest-service.docs.staging.corp.mongodb.com
+      values_files: ["ingest/environments/staging.yml"]
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
+        from_secret: staging_kubernetes_token
