--- a/ingest/environments/staging.yaml
+++ b/ingest/environments/staging.yaml
@@ -18,7 +18,7 @@ cronJobs:
       OPENAI_API_KEY: docs-chatbot-staging
       OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
       OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
-      DEVCENTER_CONNECTION_URI: docs-chatbot-staging # TODO: Add to k8s secrets
+      DEVCENTER_CONNECTION_URI: docs-chatbot-staging
     resources:
       # guaranteed amount of resources
       requests:
