--- a/ingest/environments/staging.yml
+++ b/ingest/environments/staging.yml
@@ -3,7 +3,7 @@ image:
   tag: 18
 
 cronJobs:
-  - name: script
+  - name: ingest-all-content
     schedule: "0 6 * * *" # every day at 6am UTC (1AM EST)
     command: ["node", ".", "all"]
     env:
