--- a/ingest/.release-it.json
+++ b/ingest/.release-it.json
@@ -1,10 +1,14 @@
 {
+  "git": {
+    "tag": false
+  },
   "npm": {
     "publish": false
   },
   "github": {
     "releaseName": "ingest@${version}",
-    "draft": true
+    "draft": true,
+    "release": true
   },
   "hooks": {
     "before:init": ["git pull", "npm run build", "npm run lint", "npm run test"]
