--- a/.drone.yml
+++ b/.drone.yml
@@ -229,6 +229,86 @@ steps:
 depends_on: ["test-all"]
 kind: pipeline
 type: kubernetes
+name: dev-rel-build-chatbot-server-mongodb-public
+
+trigger:
+  event:
+    - tag
+  ref:
+    include:
+      - refs/tags/chatbot-server-mongodb-public-dev-rel-*
+
+steps:
+  # Builds and publishes Docker image for qa
+  - name: publish-dev-rel-chatbot-server-mongodb-public
+    image: plugins/kaniko-ecr
+    environment:
+      ENVIRONMENT: qa
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
+      LG_ARTIFACTORY_EMAIL:
+        from_secret: lg_artifactory_email
+    settings:
+      dockerfile: chat-server.dockerfile
+      create_repository: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: docs/${DRONE_REPO_NAME}-chat-server
+      build_args:
+        - ENVIRONMENT
+        - LG_ARTIFACTORY_TOKEN
+        - LG_ARTIFACTORY_EMAIL
+      tags:
+        - git-${DRONE_COMMIT_SHA:0:7}-qa
+        - latest-dev-rel
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+
+  # Promotes current drone build to staging environment (QA server is in staging namespace)
+  - name: promote-dev-rel-chatbot-server-mongodb-public
+    image: drone/cli:1.4.0-alpine
+    commands:
+      - drone build promote mongodb/chatbot ${DRONE_BUILD_NUMBER} staging
+    environment:
+      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+      DRONE_TOKEN:
+        from_secret: drone_token
+
+---
+kind: pipeline
+type: kubernetes
+name: dev-rel-deploy-chatbot-server-mongodb-public
+
+trigger:
+  event:
+    - promote
+  target:
+    - staging
+  ref:
+    - refs/tags/chatbot-server-mongodb-public-dev-rel-*
+
+steps:
+  # Deploys docker image associated with staging build that triggered promotion
+  - name: deploy-dev-rel-chatbot-server-mongodb-public
+    image: quay.io/mongodb/drone-helm:v3
+    settings:
+      chart: mongodb/web-app
+      chart_version: 4.12.3
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: docs
+      release: chat-server-dev-rel
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-qa,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=dev-rel-generator.docs.staging.corp.mongodb.com
+      values_files:
+        ["packages/chatbot-server-mongodb-public/environments/dev-rel.yml"]
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
+        from_secret: staging_kubernetes_token
+
+---
+depends_on: ["test-all"]
+kind: pipeline
+type: kubernetes
 name: production-build-chatbot-server-mongodb-public
 
 trigger:
