--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -25,6 +25,7 @@
     "eval:conversationFaithfulness": "../mongodb-chatbot-eval/build/main.js evaluate --name conversationFaithfulness --config ./build/eval.config.js",
     "pipeline:conversationQualityCheck": "node ./build/pipelines/conversationQualityCheck.js",
     "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js",
+    "pipeline:linkInclusionCheck": "node ./build/pipelines/linkInclusionCheck.js",
     "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js",
     "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js"
   },
